# create_single_code_file

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
cg_fusion/: Cargo.toml
cg_fusion/src/: error.rs  file_generation.rs  lib.rs  main.rs  utilities.rs
cg_fusion/src/analyze/: crate_src_files.rs  dependencies.rs  error.rs  generic.rs  impl_linking.rs  mod.rs  required_by_challenge.rs  semantic_linking.rs  usage.rs
cg_fusion/src/analyze/usage/: tests.rs
cg_fusion/src/challenge_tree/: error.rs  expand.rs  fold_and_visit.rs  iterators.rs  map_impl_options.rs  mod.rs  navigate.rs  visit.rs  visitors.rs  walkers.rs
cg_fusion/src/configuration/: analyze.rs  common.rs  fusion.rs  input.rs  merge.rs  mod.rs  output.rs  processing.rs  purge.rs  traits.rs
cg_fusion/src/metadata/: error.rs  mod.rs
cg_fusion/src/parsing/: error.rs  fold_and_visit.rs  item_name.rs  mod.rs  syn_extend.rs
cg_fusion/src/processing/: crate_path_resolution.rs  crate_src_files.rs  dependencies.rs  error.rs  external_use_statements.rs  flatten_fusion.rs  forge.rs  fuse_challenge.rs  impl_block_check.rs  impl_item_dialog.rs  impl_linking.rs  mod.rs  path_minimizing.rs  required_by_challenge.rs  required_external_deps.rs  usage.rs
cg_fusion/src/processing/flatten_fusion/: tests.rs
cg_fusion/src/processing/impl_block_check/: inquire_dialog.rs  tests.rs
cg_fusion/src/processing/impl_block_check/tests/: impl_block.rs  impl_block_with_trait.rs  impl_item.rs
cg_fusion/src/processing/usage/: tests.rs
cg_fusion/test/: text_impl_config.toml
cg_fusion/test/expected_test_results/: lib_test_no_comments.rs
cg_fusion_binary_test/: Cargo.toml  cg-fusion_config.toml
cg_fusion_binary_test/src/: action.rs  lib.rs  main.rs  print.rs
cg_fusion_binary_test/test/: test_impl_config.toml  text_impl_config.toml
cg_fusion_lib_test/: Cargo.toml
cg_fusion_lib_test/my_array/: Cargo.toml
cg_fusion_lib_test/my_array/src/: lib.rs
cg_fusion_lib_test/my_map_two_dim/: Cargo.toml
cg_fusion_lib_test/my_map_two_dim/src/: lib.rs  my_map_point.rs
cg_fusion_lib_test/my_map_two_dim/src/my_map_point/: my_compass.rs
cg_fusion_lib_test/src/: lib.rs  my_array.rs  my_map_two_dim.rs
cg_fusion_lib_test/src/my_map_two_dim/: my_map_point.rs
csf_cg/: Cargo.toml
csf_cg/src/: analysis.rs  configuration.rs  error.rs  file_generation.rs  lib.rs  main.rs  post_generation.rs  preparation.rs  solve_cargo_check.rs  utilities.rs
csf_cg/src/analyze/: error.rs  generic.rs  mod.rs
csf_cg/src/challenge_tree/: error.rs  mod.rs
csf_cg/src/configuration/: analyze.rs  common.rs  fusion.rs  input.rs  make.rs  merge.rs  mod.rs  output.rs  purge.rs  traits.rs
csf_cg/src/merge/: mod.rs
csf_cg/src/metadata/: error.rs  mod.rs
csf_cg/test/: codingame_with_modifications.rs  codingame_with_modifications_in_my_map_two_dim.rs
csf_cg/test/expected_test_results/: lib_tests_with_comments.rs  test_creation_tmp_file_output.rs
csf_cg_binary_test/: Cargo.toml
csf_cg_binary_test/src/: action.rs  lib.rs  main.rs
csf_cg_lib_test/: Cargo.toml
csf_cg_lib_test/src/: my_map_two_dim.rs
