[workspace]
members = ["cg_fusion", "cg_fusion_binary_test", "cg_fusion_lib_test"]
resolver = "2"

[workspace.metadata]
description = "Create single rust code file for codingame nad similar challenge platforms."
repository = "https://github.com/DrFlowerkick/create_single_code_file"
license = "GNU GENERAL PUBLIC LICENSE"