[package]
name = "cargo-cg-fusion"
version = "2.8.0"
edition = "2024"
default-run = "cargo-cg-fusion"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.8.19"
cargo_metadata = "0.18.1"
uuid = { version = "1.11", features = ["v4"] }
syn = { version = "2.0.85", features = ["full", "visit", "extra-traits", "visit-mut", "fold"] }
thiserror = "2"
anyhow = "1"
clap = { version = "4.5.20", features = ["derive", "cargo", "wrap_help"] }
terminal_size = { version = "0.4", optional = true }
clap-cargo = { version = "0.14.1", features = ["cargo_metadata"] }
quote = "1.0.37"
petgraph = "0.6.5"
fixedbitset = { version = "0.4.0", default-features = false }
proc-macro2 = { version = "1.0", features = ["span-locations"] }
serde = { version = "1.0", features = ["derive"] }
inquire = "0.7.5"
mockall = "0.13.1"
fuzzy-matcher = "0.3.7"
toml_edit = "0.22.22"
path-clean = "1.0.1"
relative-path = "1.9.3"
either = "1.13.0"

[dev-dependencies]
once_cell = "1.20"
