[package]
name = "cg_fusion_lib_test"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
my_array = { path = "my_array" }
my_map_two_dim = { path = "my_map_two_dim" }

[workspace]
members = ["my_array", "my_map_two_dim"]
resolver = "2"

[workspace.metadata]
description = "Testing cg-fusion with workspace."