[package]
name = "create_codingame_challenge_file"
version = "2.7.0"
edition = "2021"
default-run = "cargo-cg_make"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = { version = "0.3", default-features = false }
toml = "0.8.19"
cargo_metadata = "0.18.1"
uuid = { version = "1.11", features = ["v4"] }
syn = { version = "2.0.85", features = ["full", "visit", "extra-traits"] }
thiserror = "2"
anyhow = "1"
