[package]
name = "cargo-cg-fusion"
version = "2.8.0"
edition = "2021"
default-run = "cargo-cg-fusion"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.8.19"
cargo_metadata = "0.18.1"
uuid = { version = "1.11", features = ["v4"] }
syn = { version = "2.0.85", features = ["full", "visit", "extra-traits", "visit-mut", "fold"] }
thiserror = "2"
anyhow = "1"
clap = { version = "4.5.20", features = ["derive", "cargo", "wrap_help"] }
terminal_size = { version = "0.4", optional = true }
clap-cargo = { version = "0.14.1", features = ["cargo_metadata"] }
quote = "1.0.37"
petgraph = "0.6.5"
my_lib = { path = "../../../mylib" }
proc-macro2 = "1.0.89"
